# atr_trabalho_final

./: .env.example  .gitignore  docker-compose.yml  http_example.http  index.html
DataCollector/: docker-compose.yml  pyproject.toml
DataCollector/datacollector/: main.py  publisher.py  publisher_mult.py  subscriber.py  subscriber_mult.py
DataCollector/datacollector/src/: DataCollector.py  Settings.py
DataCollector/mosquitto/config/: mosquitto.conf
DataProcessor/: index.js  index.ts  package-lock.json  package.json  tsconfig.json
DataProcessor/src/: App.ts  index.ts
DataProcessor/src/config/: MongoConfig.ts  WebSocketConfig.ts  constants.ts  envSchema.ts  fileDirName.ts  fileUploadConfig.ts  logger.ts
DataProcessor/src/controllers/: AlertController.ts  Monitor.ts  (+5 more)
DataVisualizer/: App.js  package-lock.json  package.json
DataVisualizer/CryptoMonitor/: App.js  app.json  package.json
DataVisualizer/api/: instance.ts
DataVisualizer/app/: _layout.tsx
DataVisualizer/components/: AlertItems.js  Chart.js  ListItem.js  ListItem.tsx  Styles.js
DataVisualizer/utils/: formatTimestampsDistributed.ts  jwtDecode.ts  toMonetaryFormat.js  toMonetaryFormat.ts  toPercentageFormat.ts
DataVisualizer2/: app.json  package-lock.json  package.json
DataVisualizer2/api/: instance.ts
DataVisualizer2/app/: _layout.tsx  login.tsx
DataVisualizer2/components/: ListItem.tsx
DataVisualizer2/hooks/: alerts.ts  auth.ts  cryptoCoins.ts
DataVisualizer2/stores/: auth.ts
http/: alert.http  crypto.http  monitor.http  session.http  user.http
mosquitto/config/: mosquitto.conf
(+51 files in other folders)
